# restic-scheduled-backups

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  backup.py  backup_process copy.py  backup_process.py  common.py  config_def.py  container_backup.py  containers.py  data_backup.py  example_config.json  pyproject.toml  requirements.txt  restic-backup.sh  restic_scheduled_backups.service  system.py
restic_scheduled_backups/: __main__.py  backup_process.py  common.py  config_def.py
restic_scheduled_backups/tasks/: __init__.py  backup_task.py  check_task.py  container_backup_task.py  task_base.py
restic_scheduled_backups/util/: backup.py  containers.py  ntfy.py  system.py
restic_scheduled_backups/util/util/: ntfy.py  system.py
tasks/: __init__.py  backup_task.py
util/: backup.py  system.py
