[build-system]
requires = [
    "setuptools>=64", 
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ['version']
name = "restic_scheduled_backups"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "multiprocessing-logging==0.3.4",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "requests==2.32.3",
    "resticpy==1.2.1",
    "schedule==1.2.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "wheel==0.45.1"
]
authors = [
    { name="Ryan Fitz-Gerald", email="ztif33@gmail.com" }
]
description = "A Python module to schedule and automate restic backups"
readme = "README.md"
requires-python = ">=3.12"

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ztif3/restic-scheduled-backups"
Repository = "https://github.com/ztif3/restic-scheduled-backups.git"
Issues = "https://github.com/ztif3/restic-scheduled-backups/issues"


[tool.setuptools_scm]